--- a/index.html
+++ b/index.html
@@ -26,6 +26,128 @@
             </div>
         </div>
     </section>
+    <!------------------------------header end -------------------------------->
+
+    <!-------------------------------- main ----------------------------------->
+    <main class="container-2">
+        <div class="main-sidebar">
+            <div class="sidebar">
+                <span class="a-side">Upcoming Match</span> <br>
+                <span class="a-side">All Group</span> <br>
+                <span class="a-side">Blog</span>
+            </div>
+            <div class="main-container">
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/Blog Image.png" alt="">
+                    <div class="blog-info">
+                        <p class="transfer">Transfer</p>
+                        <h3>Transfer Live: Chlesea in talks
+                            over Kimpenbe transfer</h3>
+                        <div class="time-chat">
+                            <img src="images/Time Icon.png" alt=""><i class="fa-regular fa-clock-ten">10h</i>
+                            <img src="images/Chat Icon.png" alt=""><i class="fa-regular fa-message-dots">23</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
