--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <main class="container-2">
         <div class="main-sidebar">
             <div class="sidebar">
-                <span class="a-side">Upcoming Match</span> <br>
-                <span class="a-side">All Group</span> <br>
-                <span class="a-side">Blog</span>
+                <h3 class="a-side">Upcoming Match</h3>
+                <h3 class="a-side">All Group</h3>
+                <h3 class="a-side">Blog</h3>
             </div>
             <div class="main-container">
                 <div class="blog-img">
@@ -149,5 +149,32 @@
         </div>
     </main>
 </body>
+<footer>
+    <div class="goal">
+        <h2 class="goal-info">Goal</h2>
+        <hr>
+        <div class="footer">
+            <h3>Contact Us</h3>
+            <h3>Terms of Service </h3>
+            <h3>Privacy Policy </h3>
+            <h3>Privacy Settings</h3>
+            <h3>Goal App </h3>
+            <h3>Goal Live</h3>
+        </div>
+        <div class="social-id">
+            <a href="https://twitter.com/@Foysal_Bhuiyan_" target="blank">
+                <img src="images/social-twitter.png" alt="Twitter"></a>
+
+            <a href="https://www.facebook.com/foysal.bhuioyn/" target="blank">
+                <img src="images/social-facebook.png" alt="Facebook"></a>
+
+            <a href="https://www.linkedin.com/in/oliahamed-foysalbhuiyan-9830321ab/" target="blank">
+                <img src="images/social-linkedin.png" alt="Linkedin"></a>
+
+            <a href="https://www.instagram.com/foysal__ahamed/" target="_blank">
+                <img src="images/instagram.png" alt="Instagram"></a>
+        </div>
+    </div>
+</footer>
 
 </html>
