--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="sidebar">
                 <h3 class="a-side">Upcoming Match</h3>
                 <h3 class="a-side">All Group</h3>
-                <h3 class="a-side">Blog</h3>
+                <h3 class="a-side extra">Blog</h3>
             </div>
             <div class="main-container">
                 <div class="blog-img">
