--- a/shedule.html
+++ b/shedule.html
@@ -6,10 +6,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcoming Match</title>
+    <link rel="stylesheet" href="styles/shedule.css">
 </head>
 
 <body>
+    <section class="container">
+        <div class="section-detail">
+            <div class="section-info">
+                <h1 class="section-titel">The Greatest show on the earth</h1>
+                <h6 class="titel-detail">Contrary to popular belief, Lorem Ipsum is not simply
 
+                    random text. It has roots in a piece of classical Latin literature
+                    from 45 BC, making it over 2000 years old.</h6>
+                <span class="watch-live">WATCH LIVE<i class="fa-duotone fa-arrow-right"></i></span>
+            </div>
+            <div class="image">
+                <img src="images/Banner Image.png" alt="">
+            </div>
+        </div>
+    </section>
+    <main>
+        <div class="sidebar-flag">
+            <div class="sidebar">
+                <h3 class="a-side extra">Upcoming Match</h3>
+                <h3 class="a-side">All Group</h3>
+                <h3 class="a-side">Blog</h3>
+            </div>
+            <div class="flag-detail">
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+                <div class="blog-img">
+                    <img src="images/germany Flag.png" alt="">
+                    <span>vs</span>
+                    <img src="images/Flag.png" alt="">
+                    <div class="blog-info">
+                        <h3>Germany VS France</h3>
+                        <small>April 01, 2023, 1.00 AM</small>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+<footer>
+    <div class="goal">
+        <h2 class="goal-info">Goal</h2>
+        <hr>
+        <div class="footer">
+            <h3>Contact Us</h3>
+            <h3>Terms of Service </h3>
+            <h3>Privacy Policy </h3>
+            <h3>Privacy Settings</h3>
+            <h3>Goal App </h3>
+            <h3>Goal Live</h3>
+        </div>
+        <div class="social-id">
+            <a href="https://twitter.com/@Foysal_Bhuiyan_" target="blank">
+                <img src="images/social-twitter.png" alt="Twitter"></a>
+
+            <a href="https://www.facebook.com/foysal.bhuioyn/" target="blank">
+                <img src="images/social-facebook.png" alt="Facebook"></a>
+
+            <a href="https://www.linkedin.com/in/oliahamed-foysalbhuiyan-9830321ab/" target="blank">
+                <img src="images/social-linkedin.png" alt="Linkedin"></a>
+
+            <a href="https://www.instagram.com/foysal__ahamed/" target="_blank">
+                <img src="images/instagram.png" alt="Instagram"></a>
+        </div>
+    </div>
+</footer>
 
 </html>
