--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="container-2">
         <div class="main-sidebar">
             <div class="sidebar">
-                <h3 class="a-side">Upcoming Match</h3>
+                <h3 class="a-side link"><a href="shedule.html">Upcoming Match</a></h3>
                 <h3 class="a-side">All Group</h3>
                 <h3 class="a-side extra">Blog</h3>
             </div>
